syntax = "proto3";

option go_package = "github.com/maxpoletaev/kv/gossip/proto";

message GossipMessage {
    uint32 peer_id = 1;
    uint64 seq_number = 2;
    bytes payload = 3;
    uint32 ttl = 4;
    repeated uint32 seen_by = 5;
}
